# pylongfellow

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: index.md  reference.md
examples/: prove_and_verify.py
scripts/: add_test_data.py  admit.py  build_isrg_backend.py  build_rust_backend.py  corpus.py  dump_cbor.py  dump_x509.py  extract_device_response.py  extract_mdoc.cc
src/_cffi_src/: _ffibuild.py  log_init.cc
src/pylongfellow/: __init__.py  _errors.py  _native.py
src/pylongfellow/backends/: __init__.py  cpp.py  google.py  isrg.py  rust.py
src/pylongfellow/mdoc/: __init__.py  _client.py  _credential.py  _errors.py  _facade.py  _native.py  _types.py
tests/: conftest.py  test_circuit.py  test_client.py  test_create_credential.py  test_differential.py  test_errors.py  test_facade.py  test_isrg_backend.py  test_logging.py  test_marshalling.py  test_prove.py  test_rust_backend.py  test_verify.py
tests/data/: README.md  mdoc_eu_av.json  proof_age_over_18.json
tests/data/circuits/: README.md
tests/differential/: README.md  conftest.py  test_integrity.py  test_interop.py
tests/differential/circuits/: v6-1attr.json  v6-2attr.json  v6-3attr.json  v6-4attr.json  v7-1attr.json  v7-2attr.json  v7-3attr.json  v7-4attr.json
tests/differential/presentations/av-age-over-18/: presentation.json
tests/differential/presentations/device-namespaces-nonempty/: presentation.json
tests/differential/presentations/issue-date/: google-cpp-v6.json  google-cpp-v6.proof  google-cpp-v7.json  google-cpp-v7.proof  presentation.json
tests/differential/presentations/mdl-2attr/: presentation.json
tests/differential/presentations/mdl-3attr/: presentation.json
tests/differential/presentations/mdl-4attr/: presentation.json
tests/differential/presentations/mdl-age-over-18/: google-cpp-v6.json  google-cpp-v6.proof  presentation.json
